# yappa-core

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf  rt_contract.md
docs/: ARCHITECTURE.md  PROTOCOL.md  how_to_run.md
migrations/: 001_create_messages.sql  002_create_api_key.sql  003_create_groups.sql
src/: app.rs  main.rs
src/auth/: claims.rs  jwt.rs  mod.rs
src/connection/: mod.rs  registery.rs
src/db/: batcher.rs  mod.rs
src/kafka/: consumer.rs  mod.rs  producer.rs
src/limits/: mod.rs
src/protocol/: mod.rs  protocol.rs
src/redis/: mod.rs
src/server/: groups.rs  health.rs  history.rs  mod.rs  ws.rs
