[package]
name = "realtime-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["ws"] }
dashmap = "6.1.0"
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
# rdkafka = { version = "0.39.0", features = ["cmake-build", "tokio"] }
redis = { version = "1.0.3", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
