[package]
name = "yappa-rt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["ws"] }
chrono = { version = "0.4.43", features = ["serde"] }
dashmap = "6.1.0"
dotenv = "0.15.0"
futures = "0.3.31"
hex = "0.4.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.10.0"
rdkafka = { version = "0.39.0", features = ["tokio"] }
redis = { version = "1.0.3", features = ["aio", "tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
